--- a/view/frontend/web/template/2column-layout.html
+++ b/view/frontend/web/template/2column-layout.html
@@ -2,36 +2,27 @@
 <!-- ko template: getTemplate() --><!-- /ko -->
 <!--/ko-->
 
-<!-- ko foreach: getRegion('estimation') -->
-    <!-- ko template: getTemplate() --><!-- /ko -->
-<!--/ko-->
-
 <!-- ko foreach: getRegion('messages') -->
     <!-- ko template: getTemplate() --><!-- /ko -->
 <!--/ko-->
-<div class="opc-wrapper one-page-checkout-wrapper">
+<div class="opc-wrapper one-page-checkout-wrapper one-step-checkout-box-data">
     <div class="opc opc-one-page-checkout-steps opc-container" id="checkoutSteps">
-        <div class="opc-row">
-            <div class="opcol-10 opcol-sm-10 opcol-md-6 opcol-lg-7">
-                <if args="visible() ==  true">
-                    <div class="opcol opcol-12" data-bind="scope: 'checkout.steps.shipping-step.shippingAddress'">
-                        <!-- ko template: addressTemplate --><!-- /ko -->
+        <div class="row">
+            <div class="col-md-8 col-sm-12">
+                <div class="opcol-shipping" data-bind="scope: 'checkout.steps.shipping-step'">
+                    <div class="opc-group-left-top colps-group">
+                            <!-- ko template: getTemplate() --><!-- /ko -->
                     </div>
-                    <div class="opcol opcol-12" data-bind="scope: 'checkout.steps.shipping-step'">
-                        <div class="opc-group colps-group">
-                             <!-- ko template: getTemplate() --><!-- /ko -->
-                        </div>
-                    </div>
-                </if>
-                <div class="opcol opcol-12" data-bind="scope: 'checkout.steps.billing-step'">
-                    <div class="opc-group colps-group">
+                </div>
+                <div class="opcol-billing" data-bind="scope: 'checkout.steps.billing-step'">
+                    <div class="opc-group-left-bottom colps-group">
                         <!-- ko template: getTemplate() --><!-- /ko -->
                     </div>
                 </div>
             </div>
-            <div class="opcol-10 opcol-sm-10 opcol-md-5 opcol-lg-4">
-                <div class="opcol opcol-12">
-                    <div class="opc-group">
+            <div class="col-md-4 col-sm-12 sticky-part">
+                <div class="opcol-right">
+                    <div class="opc-group-right">
                         <!-- ko foreach: getRegion('sidebar') -->
                             <!-- ko template: getTemplate() --><!-- /ko -->
                         <!--/ko-->
@@ -41,4 +32,9 @@
             </div>
         </div>
     </div>
+</div>
+<div class="my-summary-box">
+<!-- ko foreach: getRegion('estimation') -->
+    <!-- ko template: getTemplate() --><!-- /ko -->
+<!--/ko-->
 </div>
