--- a/view/frontend/web/template/payment/discount.html
+++ b/view/frontend/web/template/payment/discount.html
@@ -6,11 +6,11 @@
 -->
 <div class="payment-option _collapsible opc-payment-additional discount-code"
      data-bind="mageInit: {'collapsible':{'openedState': '_active'}}">
-    <div class="payment-option-title field choice" data-role="title">
+    <!--<div class="payment-option-title field choice" data-role="title">
         <span class="action action-toggle" id="block-discount-heading" role="heading" aria-level="2">
-            <!-- ko i18n: 'Apply Discount Code'--><!-- /ko -->
+             ko i18n: 'Apply Discount Code'--><!-- /ko 
         </span>
-    </div>
+    </div>-->
     <div class="payment-option-content" data-role="content">
         <!-- ko foreach: getRegion('messages') -->
         <!-- ko template: getTemplate() --><!-- /ko -->
@@ -28,7 +28,7 @@
                                id="discount-code"
                                name="discount_code"
                                data-validate="{'required-entry':true}"
-                               data-bind="value: couponCode, attr:{placeholder: $t('Enter discount code')} " />
+                               data-bind="value: couponCode, attr:{placeholder: $t('Enter Discount Code')} " />
                         <!-- /ko -->
                         <!-- ko if: isApplied() -->
                          <input class="input-text"
@@ -36,7 +36,7 @@
                                 id="discount-code"
                                 name="discount_code"
                                 data-validate="{'required-entry':true}"
-                                data-bind="value: couponCode, attr:{placeholder: $t('Enter discount code')} "
+                                data-bind="value: couponCode, attr:{placeholder: $t('Enter Discount Code')} "
                                 disabled />
                   <!-- /ko -->
                     </div>
@@ -46,12 +46,14 @@
                 <div class="primary">
                     <!-- ko ifnot: isApplied() -->
                         <button class="action action-apply" type="submit" data-bind="'value': $t('Apply Discount'), click: apply">
-                            <span><!-- ko i18n: 'Apply Discount'--><!-- /ko --></span>
+                            <!--<span> ko i18n: 'Apply Discount'--><!-- /ko </span>-->
+                            <i class="fas fa-arrow-right"></i>
                         </button>
                     <!-- /ko -->
                     <!-- ko if: isApplied() -->
                         <button class="action action-cancel" type="submit" data-bind="'value': $t('Cancel'), click: cancel">
-                            <span><!-- ko i18n: 'Cancel coupon'--><!-- /ko --></span>
+                            <!--<span> ko i18n: 'Cancel coupon'--><!-- /ko </span>-->
+                            <i class="fa fa-times fa-lg"></i>
                         </button>
                     <!-- /ko -->
                 </div>
