--- a/view/frontend/web/template/place-order.html
+++ b/view/frontend/web/template/place-order.html
@@ -9,12 +9,12 @@
 * @license   https://store.webkul.com/license.html
 */
 -->
-<div class="place-order">
-    <!-- ko if: message().length > 0 -->
+<!--<div class="place-order">
+     ko if: message().length > 0 
     <div class="message notice">
-        <span><!-- ko text: message()--><!-- /ko --></span>
+        <span> ko text: message() /ko </span>
     </div>
-    <!-- /ko -->
+     /ko 
     <div class="actions-toolbar place-order">
         <div class="primary">
             <button class="action primary checkout" type="button" data-bind="
@@ -25,4 +25,4 @@
             </button>
         </div>
     </div>
-</div>
+</div>-->
