--- a/view/frontend/web/template/shipping-address/address-renderer/default.html
+++ b/view/frontend/web/template/shipping-address/address-renderer/default.html
@@ -29,7 +29,7 @@
     </button>
     <!-- ko if: (!isSelected()) -->
     <button type="button" click="selectAddress" class="action action-select-shipping-item">
-        <span translate="'Ship Here'"></span>
+        <span translate="'Select'"></span>
     </button>
     <!-- /ko -->
 </div>
