--- a/view/frontend/layout/onestepcheckout_index_index.xml
+++ b/view/frontend/layout/onestepcheckout_index_index.xml
@@ -15,6 +15,7 @@
     <head>
         <css src="Webkul_OneStepCheckout::css/grid_opc.css"/>
         <css src="Webkul_OneStepCheckout::css/material-icons.css"/>
+        <script src="Webkul_OneStepCheckout::js/customjs.js" />
     </head>
     <body>
         <referenceBlock name="checkout.root" >
@@ -53,6 +54,16 @@
                                                 <item name="shippingAddress" xsi:type="array">
                                                     <item name="config" xsi:type="array">
                                                         <item name="component" xsi:type="string">Webkul_OneStepCheckout/js/view/shipping</item>
+                                                        <item name="popUpForm" xsi:type="array">
+                                                            <item name="options" xsi:type="array">
+                                                                <item name="buttons" xsi:type="array">
+                                                                    <item name="save" xsi:type="array">
+                                                                        <item name="text" xsi:type="string" translate="true">Save Address</item>
+                                                                        <item name="class" xsi:type="string">action primary action-save-address</item>
+                                                                    </item>
+                                                                </item>
+                                                            </item>
+                                                        </item>
                                                     </item>
                                                     <item name="provider" xsi:type="string">checkoutProvider</item>
                                                     <item name="sortOrder" xsi:type="string">1</item>
@@ -70,8 +81,16 @@
                                                         </item>
                                                         <item name="shipping-address-fieldset" xsi:type="array">
                                                             <item name="children" xsi:type="array">
+                                                                <item name="city" xsi:type="array">
+                                                                    <item name="sortOrder" xsi:type="string">80</item>
+                                                                </item>
+                                                                <item name="country_id" xsi:type="array">
+                                                                    <item name="sortOrder" xsi:type="string">90</item>
+                                                                </item>
                                                                 <item name="telephone" xsi:type="array">
-                                                                    <item name="sortOrder" xsi:type="string">65</item>
+                                                                    <item name="config" xsi:type="array">
+                                                                        <item name="label" xsi:type="string">Telephone Number</item>
+                                                                    </item>
                                                                 </item>
                                                             </item>
                                                         </item>
