--- a/view/frontend/web/template/authentication.html
+++ b/view/frontend/web/template/authentication.html
@@ -9,7 +9,7 @@
 * @license   https://store.webkul.com/license.html
 */
 -->
-<div class="authentication authentication-wrapper" data-block="authentication" data-bind="visible: isActive()">
+<!--<div class="authentication authentication-wrapper" data-block="authentication" data-bind="visible: isActive()">
     <button
         type="button"
         class=" action-auth-toggle"
@@ -28,9 +28,6 @@
                 'responsive': true,
                 'buttons': []
             }}">
-        <!-- ko foreach: getRegion('before') -->
-        <!-- ko template: getTemplate() --><!-- /ko -->
-        <!-- /ko -->
         <div class="block block-customer-login"
              data-bind="attr: {'data-label': $t('or')}">
             <div class="block-title">
@@ -39,9 +36,6 @@
                         aria-level="2"
                         data-bind="i18n: 'Sign In'"></strong>
             </div>
-            <!-- ko foreach: getRegion('messages') -->
-            <!-- ko template: getTemplate() --><!-- /ko -->
-            <!--/ko-->
             <div class="block-content" aria-labelledby="block-customer-login-heading">
                 <form data-role="login"
                       data-bind="submit:login"
@@ -71,9 +65,6 @@
                                        autocomplete="off"/>
                             </div>
                         </div>
-                        <!-- ko foreach: getRegion('additional-login-form-fields') -->
-                        <!-- ko template: getTemplate() --><!-- /ko -->
-                        <!-- /ko -->
                     </div>
                     <div class="actions-toolbar">
                         <input name="context" type="hidden" value="checkout" />
@@ -90,4 +81,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
