--- a/view/frontend/web/template/summary/item/details.html
+++ b/view/frontend/web/template/summary/item/details.html
@@ -9,12 +9,12 @@
     <!-- ko template: getTemplate() --><!-- /ko -->
 <!-- /ko -->
 <div class="product-item-details">
-    <div class="product-item-inner opc-row">
-        <div class="product-item-name-block opcol-md-8 opcol-lg-8 opcol-xl-7">
+    <div class="product-item-inner">
+        <div class="product-item-name-block">
             <strong class="product-item-name" data-bind="html: $parent.name"></strong>
-            <div class="details-qty opc-row">
-                <span class="label opcol-1"><!-- ko i18n: 'Qty' --><!-- /ko --></span>
-                <div class="spinbox opcol-sm-6 opcol-md-5 opcol-lg-5" data-min="1" data-max="10" data-step="2">
+            <div class="details-qty">
+                <!--<span class="label opcol-1"> ko i18n: 'Qty' --><!-- /ko </span>-->
+                <div class="spinbox" data-min="1" data-max="10" data-step="2">
                     <div class="quantity">
                         <span class="quantity__minus"><span data-bind="click: decreaseQty">-</span></span>
                         <input class="form-control spinbox-input" type="number" data-bind="event: {'change': onChange}, attr: {'data-cart-item': $parent.item_id}, value: $parent.qty">
@@ -23,14 +23,14 @@
                 </div>
                 <div class="product actions">
                     <div class="secondary">
-                        <span data-bind="click: removeItem, attr: {'data-cart-item': $parent.item_id, title: $t('Remove item')}" class="action delete">
-                            <span data-bind="i18n: 'Remove'"></span>
+                        <span data-bind="click: removeItem, attr: {'data-cart-item': $parent.item_id, title: $t('Remove item')}" class="action-delete">
+                            <!--<span data-bind="i18n: 'Remove'"></span>-->
                         </span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="after-details opcol-md-2 opcol-lg-2">
+        <div class="after-details">
             <!-- ko foreach: getRegion('after_details') -->
                 <!-- ko template: getTemplate() --><!-- /ko -->
             <!-- /ko -->
